--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav__link" href="#membership">Seja um membro</a>
             </li>
             <li>
-              <a class="nav__link">Contatos</a>
+              <a class="nav__link" href="#contacts">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -267,7 +267,7 @@
         </section>
       </main>
       <footer class="footer">
-        <section class="footer__columns">
+        <section class="footer__columns" id="contacts">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
