contact nav-link update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav__link" href="#membership">Seja um membro</a>
             </li>
             <li>
-              <a class="nav__link" href="contacts">Contatos</a>
+              <a class="nav__link" href="#contacts">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -266,8 +266,8 @@
           </ul>
         </section>
       </main>
-      <footer class="footer" id="contacts">
-        <section class="footer__columns">
+      <footer class="footer">
+        <section class="footer__columns" id="contacts">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
